# windeval

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test.yaml
docs/: index.rst
docs/_source/: conversions.rst  diagnostics.rst  io.rst  reports.rst  user_interface.rst
src/windeval/: __init__.py  api.py  app.py  processing.py
src/windeval/io/: api.py  products.py  reports.py
tests/: __init__.py  conftest.py  test_api.py  test_plotting.py  test_processing.py  test_windeval.py
tests/io/: test_products.py  test_reports.py
