[tool.poetry]
name = "windeval"
version = "0.1.0"
description = ""
authors = ["windeval developers <windeval@googlegroups.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.1"
pandas = "^1.0.3"
xarray = "^0.15.1"
matplotlib = "^3.2.1"
netcdf4 = "^1.5.3"
h5py = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "19.3b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
mypy = "^0.770"
pre-commit = "^2.2.0"
sphinx = "^3.0.0"
numpydoc = "^0.9.2"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
jupyterlab = "^2.1.0"
pdbpp = "^0.10.2"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
