[tool.poetry]
name = "windeval"
version = "2020.1"
description = ""
authors = ["windeval developers <windeval@googlegroups.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/windeval/windeval"

[tool.poetry.scripts]
windeval = "windeval.app:main"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.1"
pandas = "^1.0.3"
xarray = "^0.15.1"
matplotlib = "^3.2.1"
netcdf4 = "^1.5.3"
h5py = "^2.10.0"
streamlit = "^0.58.0"
windeval-catalog = { git = "https://github.com/windeval/windeval-catalog.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.3b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
mypy = "^0.770"
pre-commit = "^2.2.0"
pdbpp = "^0.10.2"
ipdb = "^0.13.2"
sphinx = { version = "^3.0.0", optional = true }
numpydoc = { version = "^0.9.2", optional = true }
recommonmark = { version = "^0.6.0", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }
jupyterlab = { version = "^2.1.0", optional = true }
bpython = { version = "^0.19", optional = true }

[tool.poetry.extras]
bpy = ["bpython"]
lab = ["jupyterlab"]
docs = ["sphinx", "numpydoc", "recommonmark", "sphinx_rtd_theme"]

[tool.isort]
line_length = 88
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "windeval"
known_third_party = ["matplotlib", "numpy", "pytest", "scipy", "streamlit", "windeval", "xarray"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
